// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressCircle Component should match snapshot  1`] = `
<StyledComponent
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "sc-bdVaJa",
        "isStatic": false,
        "rules": Array [
          "
  ",
          [Function],
          ";
  ",
          [Function],
          ";
",
        ],
      },
      "displayName": "Styled(NavBar)",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "sc-bdVaJa",
      "target": [Function],
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
  items={
    Array [
      Object {
        "href": "/1",
        "label": "Link 1",
      },
      Object {
        "href": "/2",
        "label": "Link 2",
      },
    ]
  }
/>
`;

exports[`ProgressCircle Component should match snapshot with vertical view  1`] = `
<StyledComponent
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "sc-bdVaJa",
        "isStatic": false,
        "rules": Array [
          "
  ",
          [Function],
          ";
  ",
          [Function],
          ";
",
        ],
      },
      "displayName": "Styled(NavBar)",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "sc-bdVaJa",
      "target": [Function],
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
  items={
    Array [
      Object {
        "href": "/1",
        "label": "Link 1",
      },
      Object {
        "href": "/2",
        "label": "Link 2",
      },
    ]
  }
  vertical={true}
/>
`;
